# SpecForged

./: .dockerignore  .env.example  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  INSTALLATION_TEST.md  Makefile  README.md  TUTORIAL.md  docker-compose.yml  install.ps1  install.sh  main.py  main_http.py  nginx.conf  performance_config.json  pyproject.toml  requirements.txt  run_integration_tests.py  smithery.yaml  test_performance_basic.py  test_pydantic_migration.py
.github/workflows/: publish.yml  release.yml  test.yml
.kiro/hooks/: python-quality-check.kiro.hook  vscode-extension-lint.kiro.hook
.kiro/specs/unified-mcp-ecosystem/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: API.md  DEVELOPER_GUIDE.md  EXTENSION_DEVELOPMENT.md  INTEGRATION_TESTING.md  MIGRATION_GUIDE.md  SECURITY.md  STANDALONE_USAGE.md  TESTING_SCENARIOS.md  TROUBLESHOOTING.md  USER_GUIDE.md
example/: README.md
infra/: Dockerfile  docker-compose.yml  nginx.conf
scripts/: dev.py  release.py  run_integration_tests.py
src/: __init__.py  resources.py
src/core/: __init__.py  spec_manager.py
src/models/: __init__.py  core.py
src/specforge/: __init__.py  __main__.py  cli.py  server.py
src/specforge/core/: classifier.py
src/specforged/: __init__.py  __main__.py  cli.py  prompts.py  resources.py  server.py  server_config.py  smithery_server.py  wizard.py
src/specforged/config/: __init__.py  manager.py  performance.py  schema.py
src/specforged/core/: __init__.py  classifier.py  plan_generator.py  project_detector.py  queue_processor.py  spec_manager.py
src/specforged/models/: __init__.py  core.py
src/specforged/security/: __init__.py  audit_logger.py  data_sanitizer.py  input_validator.py  path_security.py  rate_limiter.py  secure_file_ops.py
src/specforged/templates/: __init__.py  rest_api.py  web_app.py
src/specforged/tools/: __init__.py  classification.py  filesystem.py  performance_cli.py  planning.py  specifications.py  workflow.py
src/specforged/utils/: performance_monitor.py
src/tools/: __init__.py  classification.py  planning.py  specifications.py
tests/: __init__.py  test_checkbox_format.py  test_classifier.py  test_cli.py  test_configuration_system.py  test_enhanced_task.py  test_models.py  test_performance_basic.py  test_performance_benchmarks.py  test_performance_optimizations.py  test_plan_generator.py  test_queue_processor.py  test_security.py  test_server_integration.py  test_spec_manager.py  test_wizard.py
tests/integration/: README.md  __init__.py  conftest.py  cross_platform_utils.py  fixtures.py  test_conflict_resolution.py  test_end_to_end.py  test_filesystem_sync.py  test_operation_lifecycle.py  test_performance_load.py  test_server_connectivity.py
vscode-specforged/: .editorconfig  .eslintrc.json  .gitignore  .vscodeignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  LICENSE  Makefile  README.md  package-lock.json  package.json  tsconfig.json
vscode-specforged/.github/workflows/: ci.yml
vscode-specforged/resources/styles/: webview.css
vscode-specforged/scripts/: build.sh  dev-setup.sh
vscode-specforged/src/: extension.ts
vscode-specforged/src/adapters/: UniversalMcpAdapter.ts
(+54 files in other folders)
