[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specforged"
version = "0.3.2"
description = "Spec-driven development workflow with mode classification and EARS notation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SpecForge Team"}
]
maintainers = [
    {name = "SpecForge Team"}
]
keywords = ["mcp", "specifications", "ears", "requirements", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: System :: Software Distribution",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastmcp>=0.3.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "types-aiofiles>=23.0.0",
    "uvicorn[standard]>=0.24.0",
    "starlette>=0.32.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "smithery>=0.1.23",
]

[project.scripts]
specforged = "specforged.cli:specforge_mcp"
specforged-http = "specforged.cli:specforge_http"
specforged-cli = "specforged.cli:main"
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[project.urls]
Homepage = "https://github.com/whit3rabbit/SpecForge"
Documentation = "https://github.com/whit3rabbit/SpecForge#readme"
Repository = "https://github.com/whit3rabbit/SpecForge.git"
Issues = "https://github.com/whit3rabbit/SpecForge/issues"
PyPI = "https://pypi.org/project/specforged/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 101
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/specforged"]

[tool.smithery]
server = "specforged.smithery_server:create_smithery_server"

[dependency-groups]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=4.3.0",
    "types-aiofiles>=24.1.0.20250822",
]
